--- a/index.html
+++ b/index.html
@@ -138,7 +138,14 @@
             <section class="pop-card">
               <img src="images/hebergements/4_small/bedandbreakfast.jpg" alt="pophotel" class="pop-card-img"/>
               <h3 class="pop-card-title">Au coeur de l'eau Bed and Breakfast</h3>
-              <p class="pop-card-description">Nights starting at<span class="pop-card-price"> 71&euro;</span></p>
+              <p class="pop-card-description">Nights starting at<span class="pop-card-price">71&euro;</span></p>
+            </section>
+
+            <section class="pop-card">
+              <img src="images/hebergements/4_small/blanc.jpg"
+              alt="pophotel" class="pop-card-img"/>
+              <h3 class="pop-card-title">Touy bleu et Blanc Hotel</h3>
+              <p class="pop-card-description">Nights starting at<span class="pop-card-price">68&euro;</span></p>
             </section>
           
           </section>
