more pop card updates w/ rating

--- a/index.html
+++ b/index.html
@@ -132,13 +132,25 @@
             <section class="pop-card">
               <img src="images/hebergements/4_small/morningsun.jpg"   alt="pophotel" class="pop-card-img"/>
               <h3 class="pop-card-title">Morning Sun Hotel</h3>
-              <p class="pop-card-description"> Nights starting at<span class="pop-card-price">128&euro;</p></span>
+              <p class="pop-card-description"> Nights starting at<span class="pop-card-price">128&euro;</span></p>
+              <div class="rating">  
+                <i class="fas fa-star bluestar"></i> 
+                <i class="fas fa-star bluestar"></i> 
+                <i class="fas fa-star bluestar"></i> 
+                <i class="fas fa-star bluestar"></i> 
+                <i class="fas fa-star bluestar"></i></div
             </section>
 
             <section class="pop-card">
               <img src="images/hebergements/4_small/bedandbreakfast.jpg" alt="pophotel" class="pop-card-img"/>
               <h3 class="pop-card-title">Au coeur de l'eau Bed and Breakfast</h3>
               <p class="pop-card-description">Nights starting at<span class="pop-card-price">71&euro;</span></p>
+              <div class="rating">  
+                <i class="fas fa-star bluestar"></i> 
+                <i class="fas fa-star bluestar"></i> 
+                <i class="fas fa-star bluestar"></i> 
+                <i class="fas fa-star bluestar"></i> 
+                <i class="fas fa-star greystar"></i></div
             </section>
 
             <section class="pop-card">
@@ -146,6 +158,12 @@
               alt="pophotel" class="pop-card-img"/>
               <h3 class="pop-card-title">Touy bleu et Blanc Hotel</h3>
               <p class="pop-card-description">Nights starting at<span class="pop-card-price">68&euro;</span></p>
+              <div class="rating">  
+                <i class="fas fa-star bluestar"></i> 
+                <i class="fas fa-star bluestar"></i> 
+                <i class="fas fa-star bluestar"></i> 
+                <i class="fas fa-star bluestar"></i> 
+                <i class="fas fa-star greystar"></i></div
             </section>
           
           </section>
